dandole mas semantica al html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,11 +9,20 @@
     <script src="assets/Js/main.js"></script>
     <title>Numero Magico</title>
 </head>
+
 <body>
-    Ingrese el numero Magico entre (1 - 100)
-    <p id="intentos"></p>
-    <input id="numero" type="Number">
-    <button onclick="numeroMagico()">Enviar</button>
-    <span id="pista"></span>
+    <div class="box">
+        Ingrese el numero Magico entre (1 - 100)
+        <p id="intentos"></p>
+        <div class="entradas">
+            <input id="numero" type="Number">
+            <button onclick="numeroMagico()">Enviar</button>
+        </div>
+        <span id="pista"></span>
+        <aside>
+            
+        </aside>
+    </div>
 </body>
+
 </html>
