--- a/index.html
+++ b/index.html
@@ -10,12 +10,21 @@
     <link rel="stylesheet" href="assets/css/stile.css">
     <link rel="stylesheet" href="assets/css/historial/historial.css">
     <link rel="stylesheet" href="assets/css/historial/historial-tabla.css">
+    <link rel="stylesheet" href="assets/css/titulo/titulo.css">
+    <link rel="stylesheet" href="assets/css/titulo/titulo-juego.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script src="assets/Js/main.js"></script>
     <title>Numero Magico</title>
 </head>
 
 <body>
+
+    <div class="titulo">
+        <h1 class="titulo__juego">Numero Magico</h1>
+    </div>
+
+    <video class="video" src="assets/img/Blue Fluid Abstract Texture Zoom Virtual Background.mp4" autoplay muted loop></video>
+
     <section class="box">
         <h2 class="box__titulo">Ingrese un numero entre (1 - 100)</h2>
         <p id="intentos"></p>
