--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="assets/css/titulo/titulo.css">
     <link rel="stylesheet" href="assets/css/titulo/titulo-juego.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="assets/Js/main.js"></script>
     <title>Numero Magico</title>
 </head>
